<resources>
    <string name="app_name">FunLounge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registar_conta">Registar Conta</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="logo_funlounge">Logo FUNLOUNGE</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="email">Email</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="confirmar_palavra_passe">Confirmar Palavra-Passe</string>
    <string name="registar">Registar</string>
    <string name="nome_de_utilizador_ou_email">Nome de Utilizador ou Email</string>
    <string name="password">Palavra-Passe</string>
    <string name="efetuar_login">Efetuar Login</string>
    <string name="jogo_do_galo">Jogo do Galo</string>
    <string name="jogar">Jogar</string>
    <string name="ver_estatasticas">Ver Estatísticas</string>
    <string name="definicoes_utilizador">Definições Utilizador</string>
    <string name="acerca_da_app_funlounge">Acerca da App FUNLOUNGE</string>
    <string name="acerca_da_app">Aplicação desenvolvida por:\n-Daniel Afonso, nº 20615\n-João Correia, nº 21302\n\nUnidade Curricular\nDesenvolvimento de Aplicações Móveis\n\nDocentes:\nProf. Paulo Santos\nProf. José Casimiro\n\n2024/2025\nInstituto Politécnico de Tomar</string>
    <string name="introduzir_nome_dos_jogadores">Introduzir Nome dos Jogadores</string>
    <string name="logo_jogador1">logo jogador1</string>
    <string name="jogador_1">Jogador 1</string>
    <string name="jogador_2">Jogador 2</string>
    <string name="come_ar_jogo">Começar Jogo</string>
    <string name="logo_jogador2">logo jogador2</string>
    <string name="jogos_jogados_0">Jogos Jogados: 0</string>
    <string name="reiniciar_estat_stica">Reiniciar Estatística</string>
    <string name="jogador_1_vit_rias_0">Jogador 1 - Vitórias: 0</string>
    <string name="jogador_2_vit_rias_0">Jogador 2 - Vitórias: 0</string>
    <string name="iconjogador1">iconJogador1</string>
    <string name="iconjogador2">iconJogador2</string>
    <string name="areajogo">areaJogo</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="sair">Sair</string>
    <string name="mensagem_aqui">mensagem aqui</string>
    <string name="come_ar_novamente">Começar Novamente</string>
    <string name="voltar_ao_menu_principal">Voltar ao menu principal</string>
    <string name="eliminar_perfil">Eliminar perfil</string>
    <string name="jogar_contra_o_bot">Jogar Contra o Bot</string>
    <string name="jogar_contra_um_amigo">Jogar Contra um Amigo</string>
    <string name="escolha_o_seu_nome_e_s_mbolo">Escolha o seu nome e símbolo</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="escolha_o_seu_s_mbolo">Escolha o seu símbolo:</string>
    <string name="iniciar_jogo">Iniciar Jogo</string>
    <string name="defini_es_de_utilizador">Definições de Utilizador</string>
</resources>