<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_pink">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="190dp"
        android:text="@string/jogo_do_galo"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/JogarBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/jogar"
        android:layout_marginTop="40dp"
        android:background="@drawable/greenbutton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StatsBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/ver_estatasticas"
        android:layout_marginTop="40dp"
        android:background="@drawable/greenbutton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DefinBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/defini_es_de_utilizador"
        android:layout_marginTop="40dp"
        android:background="@drawable/greenbutton"/>


</LinearLayout>