<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_pink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarJogadores">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduzir_nome_dos_jogadores"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/logo_jogador1"
            android:src="@drawable/bola"/>

        <EditText
            android:autofillHints=""
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/jogador1nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/light_green"
            android:hint="@string/jogador_1"
            android:textColorHint="@color/black"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/logo_jogador2"
            android:src="@drawable/cruz"/>

        <EditText
            android:autofillHints=""
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/jogador2nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/light_green"
            android:hint="@string/jogador_2"
            android:textColorHint="@color/black"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ComecarJogoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/come_ar_jogo"
        android:textColor="#FFFFFF"
        android:background="@drawable/greenbutton"/>

</LinearLayout>